@@ -554,6 +554,9 @@ static int Swap_weapons
 		if (!aobj || !In_ammo_family(aobj->get_shapenum(), ammo))
 			return 0;
 		}
+	else if (winf->uses_charges() && info.has_quality())
+		if (bobj->get_quality() <= 0)
+			return 0;	// No charges left.
 	if (info.get_ready_type() == two_handed_weapon &&
 	    npc->get_readied(Actor::rhand) != 0)
 		return 0;		// Needs two free hands.
@@ -607,6 +610,8 @@ void Combat_schedule::start_strike
 		else if (ammo_shape &&
 		    (!(aobj = npc->get_readied(Actor::ammo)) ||
 			!In_ammo_family(aobj->get_shapenum(), ammo_shape)))
+			weapon_dead = true;
+		else if (uses_charges && weapon && weapon->get_quality() <= 0)
 			weapon_dead = true;
 		if (weapon_dead)
 			{		// Out of ammo/reagents.
@@ -741,7 +746,7 @@ void Combat_schedule::set_weapon
 	{
 	int points;
 	spellbook = 0;
-	Weapon_info *info = npc->get_weapon(points, weapon_shape);
+	Weapon_info *info = npc->get_weapon(points, weapon_shape, weapon);
 	if (!info &&			// No weapon?
 	    !(spellbook = readied_spellbook()) &&	// No spellbook?
 					// Not dragging?
@@ -751,14 +756,15 @@ void Combat_schedule::set_weapon
 	    state != wait_return)	// And not waiting for boomerang.
 		{
 		npc->ready_best_weapon();
-		info = npc->get_weapon(points, weapon_shape);
+		info = npc->get_weapon(points, weapon_shape, weapon);
 		}
 	if (!info)			// Still nothing.
 		{
+		weapon = 0;
 		projectile_shape = ammo_shape = 0;
 		projectile_range = 0;
 		strike_range = 1;	// Can always bite.
-		is_thrown = returns = no_blocking = false;
+		is_thrown = returns = no_blocking = uses_charges = false;
 		if (spellbook)		// Did we find a spellbook?
 			{
 			projectile_range = 10;	// Guessing.
@@ -769,6 +775,8 @@ void Combat_schedule::set_weapon
 		{
 		projectile_shape = info->get_projectile();
 		ammo_shape = info->get_ammo_consumed();
+		uses_charges = info->uses_charges() && weapon &&
+					weapon->get_info().has_quality();
 		strike_range = info->get_striking_range();
 		projectile_range = info->get_projectile_range();
 
@@ -853,11 +861,11 @@ Combat_schedule::Combat_schedule
 	Schedule_types 
 	prev_sched
 	) : Schedule(n), state(initial), prev_schedule(prev_sched),
-		weapon_shape(0),
+		weapon(0), weapon_shape(0),
 		ammo_shape(0), projectile_shape(0), spellbook(0),
 		strike_range(0), projectile_range(0), max_range(0),
 		practice_target(0), is_thrown(false), yelled(0),
-		no_blocking(false),
+		no_blocking(false), uses_charges(false),
 		started_battle(false), fleed(0), failures(0), teleport_time(0)
 	{
 	Combat_schedule::set_weapon();
@@ -989,6 +997,11 @@ void Combat_schedule::now_what
 			ashape = 0;	// Just to be on the safe side...
 			if (!spellbook->do_spell(npc, true))
 				Combat_schedule::set_weapon();
+			}
+		else if (uses_charges)
+			{
+			weapon->set_quality(weapon->get_quality() - 1);
+			ashape = pshape;
 			}
 		else			// Ammo required?
 			ashape = ashape ? Use_ammo(npc, ashape, pshape)
